# contactos_front

./: .gitignore  README.md  package-lock.json  package.json
integration_tests/: cargos_tests_case.py  pyproject.toml
src/: App.tsx  type.d.ts
src/components/EditarContacto/: EditarContactoForm.tsx
src/components/commons/: ConfirmationDialog.tsx
src/components/contactos/: ContactoFormValidation.ts  Contactos.tsx  ContextualMenu.tsx  NuevoContactoForm.tsx
src/components/dashboard/: ColectivoDropdown.tsx  Dashboard.jsx  Dashboard.tsx  SearchBox.tsx
src/components/listarContactos/: Contactos.tsx  ContextualMenu.tsx
src/components/login/: Login.css  Login.jsx  Login.tsx
src/components/nuevoContacto/: ContactoFormValidation.ts  FormStepOne.tsx  FormStepThree.tsx  FormStepTwo.tsx  NuevoContactoForm.tsx  NuevoContactoStepper.tsx
src/components/routes/: ProtectedRoute.tsx  Routes.tsx  UnProtectedRoute.tsx
src/components/sidebar/: Sidebar.tsx
src/helpers/: axios-instance.ts  index.ts
src/models/: Colectivo.ts  User.ts
src/services/: Auth.ts  Login.ts  ProtectedRoute.tsx  UnProtectedRoute.tsx  cargo.service.ts  colectivo.service.ts  index.ts  pais.service.ts  persona.service.ts  provincia.service.ts  subcolectivo.service.ts  tratamiento.service.ts  user.service.ts
src/store/: store.ts
src/store/actions/: alert.actions.ts  app-actions.ts  cargo.actions.ts  cargos.actions.ts  colectivo.actions.ts  correos.actions.ts  custom-dialog.actions.ts  index.ts  pais.actions.ts  provincia.actions.ts  search-contacto.actions.ts  selected-cargo.actions.ts  (+7 more)
(+44 files in other folders)
