[tool.poetry]
name = "integration_tests"
version = "0.1.0"
description = ""
authors = ["Roberto Rodríguez <roberto.rodriguez@juntaex.es>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
Faker = "^8.12.1"
html-testRunner = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
